--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="libs/bzip2.jar"/>
+	<classpathentry kind="lib" path="libs/javacsv.jar"/>
+	<classpathentry kind="lib" path="libs/jsoup-1.6.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
